--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "Patrick McElhaney",
   "license": "ISC",
   "dependencies": {
+    "chai": "^3.5.0",
+    "eslint": "^3.15.0",
     "mocha": "^3.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
